trunk/Archive2/63/ce11e2406935f8/output
main.cpp:4:19: error: invalid conversion from 'const char*' to 'char*' [-fpermissive]
 char* c = s.c_str();
                   ^
