trunk/Archive2/63/ce11e2406935f8/main.cpp
#include <string>

std::string s;
char* c = s.c_str();